WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122202
REGRESSION(156464): 50% regression on SunSpider/string-fasta
https://bugs.webkit.org/show_bug.cgi?id=122202
Summary
REGRESSION(156464): 50% regression on SunSpider/string-fasta
Filip Pizlo
Reported
2013-10-01 19:08:04 PDT
Rollout forthcoming.
Attachments
patch for landing
(83.41 KB, patch)
2013-10-01 19:12 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-10-01 19:12:38 PDT
Created
attachment 213143
[details]
patch for landing
Filip Pizlo
Comment 2
2013-10-01 19:18:29 PDT
Landed in
http://trac.webkit.org/changeset/156757
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug